--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -23,9 +23,9 @@
             <div class="square" id="square8"></div>
         </div>
     </main>
-<!-- <script src="./tic-tac-toe.js"></script> -->
+<script src="./tic-tac-toe.js"></script>
 
-<script>
+<!-- <script>
     var nextTurn = "X"
     var squares = document.querySelectorAll('.square')
     var gameBoard = document.querySelector('#gameBoard')
@@ -76,7 +76,7 @@
     }
         
 
-</script>
+</script> -->
     
 </body>
 </html>
