--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="tic-tac-toe.css">
 </head>
+
 <body>
     <main class="grid">
         <h1>TIC TAC TOE</h1>
+        <div class="scoreBoard">
+            <h2 id="X-score">X: 0</h2>
+            <h2 id="O-score">O: 0</h2>
+        </div>
         <h2 class="winnerDisplay"></h2>
         <div id="gameBoard">
             <div class="square" id="square0"></div>
@@ -23,60 +29,7 @@
             <div class="square" id="square8"></div>
         </div>
     </main>
-<script src="./tic-tac-toe.js"></script>
-
-<!-- <script>
-    var nextTurn = "X"
-    var squares = document.querySelectorAll('.square')
-    var gameBoard = document.querySelector('#gameBoard')
-    gameBoard.addEventListener("click", function(event) {
-        var clickedDiv = event.target
-        if (clickedDiv.innerText.trim() != "") {
-            return
-        } clickedDiv.innerText = nextTurn
-          changeTurn()
-        var winner = checkWin()
-        console.log(winner)
-        if (winner === 'X wins!' || winner === 'O wins!') {
-            document.querySelector(".winnerDisplay").innerText = winner
-        } else if (winner === 'Tie') {
-            document.querySelector(".winnerDisplay").innerText = "Tie!"
-        }
-    })
-    function changeTurn() {
-        if (nextTurn === "X") {
-            nextTurn = "O"
-        } else {
-            nextTurn = "X"
-        }
-    }
-    function checkWin() {
-            if (
-                (squares[0].innerText === squares[1].innerText && squares[1].innerText === squares[2].innerText && squares[0].innerText !== "") ||
-                (squares[3].innerText === squares[4].innerText && squares[4].innerText === squares[5].innerText && squares[3].innerText !== "") ||
-                (squares[6].innerText === squares[7].innerText && squares[7].innerText === squares[8].innerText && squares[6].innerText !== "") ||
-                (squares[0].innerText === squares[3].innerText && squares[3].innerText === squares[6].innerText && squares[0].innerText !== "") ||
-                (squares[1].innerText === squares[4].innerText && squares[4].innerText === squares[7].innerText && squares[1].innerText !== "") ||
-                (squares[2].innerText === squares[5].innerText && squares[5].innerText === squares[8].innerText && squares[2].innerText !== "") ||
-                (squares[0].innerText === squares[4].innerText && squares[4].innerText === squares[8].innerText && squares[0].innerText !== "") ||
-                (squares[2].innerText === squares[4].innerText && squares[4].innerText === squares[6].innerText && squares[2].innerText !== "")
-                ) {
-                if (nextTurn === "X") {
-                    return "O wins!"
-                } else {
-                    return "X wins!"
-                }
-            }
-            for (var i = 0; i < squares.length; i++) {
-                if (squares[i].innerText === "") {
-                    return;
-            }
-        }
-        return "Tie";
-    }
-        
-
-</script> -->
-    
+    <script src="./tic-tac-toe.js"></script>
 </body>
+
 </html>
