--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="square" id="square7"></div>
             <div class="square" id="square8"></div>
         </div>
+        <button id="play-again" style="display:none">Play Again</button>
     </main>
     <script src="./tic-tac-toe.js"></script>
 </body>
